--- a/index.html
+++ b/index.html
@@ -8,22 +8,18 @@
     <link rel="styleshert" href="style.css">
 </head>
 <body>
-    <header class="cabeçalho">
-        <h1>Sobre A Barbearia Alura</h1>   
-    </header>
-    
-   <p>Localizada no coração da cidade 
-       a <strong>Barbearia Alura </strong> traz
+    <h1 class="titulo" >Sobre A Barbearia Alura</h1>   
+    <p>Localizada no coração da cidade 
+        a <strong>Barbearia Alura </strong> traz para o 
+       mercado o que há de melhor para o seu cabelo 
+        e barba. Fundada em 2019, a Barbearia Alura já é 
+       destaque na cidade e conquista novos clientes 
+       a cada dia.</p>
 
-       para o mercado o que há de melhor para o seu cabelo 
-       e barba. Fundada em 2019, a Barbearia Alura já é des
-       taque na cidade e conquista novos clientes a cada 
-       dia.</p>
-
-   <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade 
+         <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade 
        de vida aos clientes".</strong></em></p>
     
-   <p>Oferecemos profissionais experientes e antenados às 
+         <p>Oferecemos profissionais experientes e antenados às 
        mudanças no mundo da moda. O atendimento possui padrão 
        de excelência e agilidade, garantindo qualidade e 
        satisfação dos nossos clientes.</p>
