--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
-    <link rel="styleshert" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <img src="banner.jpg" alt="">
     <h1 class="titulo" >Sobre A Barbearia Alura</h1>   
     <p>Localizada no coração da cidade 
         a <strong>Barbearia Alura </strong> traz para o 
@@ -16,7 +18,7 @@
        destaque na cidade e conquista novos clientes 
        a cada dia.</p>
 
-         <p> <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade 
+         <p> <em>Nossa missão é: <strong class="destaque">"Proporcionar auto-estima e qualidade 
        de vida aos clientes".</strong></em></p>
     
          <p>Oferecemos profissionais experientes e antenados às 
