--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-    <img src="banner.jpg" alt="">
+    <img class="imagem" src="banner.jpg" alt="">
+      <div class="principal">
     <h1 class="titulo" >Sobre A Barbearia Alura</h1>   
     <p>Localizada no coração da cidade 
         a <strong>Barbearia Alura </strong> traz para o 
@@ -26,5 +27,20 @@
        de excelência e agilidade, garantindo qualidade e 
        satisfação dos nossos clientes.</p>
 
+       </div>
+
+       <div class="beneficios">
+
+         <h2 class="alinhar">Benefícios</h2>
+
+         <ul>
+            <li>Atendimento aos Clientes</li>
+            <li>Espaço Diferenciado</li>
+            <li>Profissionais Qualificados</li>
+            <li>Otima localização</li>
+         </ul>
+        </div>
+
+        <img class="imagem_beneficios" src="beneficios.jpg" alt="">
 </body>
 </html>
