--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
 
+    <h1 class="titulo principal" ></h1>
+
     <img class="imagem" src="banner.jpg" alt="">
-      <div class="principal">
-    <h1 class="titulo" >Sobre A Barbearia Alura</h1>   
+
+    <div class="principal">
+
+    <h2 class="titulo" >Sobre A Barbearia Alura</h2>  
+
     <p>Localizada no coração da cidade 
         a <strong>Barbearia Alura </strong> traz para o 
        mercado o que há de melhor para o seu cabelo 
@@ -29,17 +34,17 @@
 
        </div>
 
-       <div class="beneficios">
+       
 
-         <h2 class="alinhar">Benefícios</h2>
+         <h3 class="alinhar">Benefícios</h3>
 
-         <ul>
+         <ul class="lista">
             <li>Atendimento aos Clientes</li>
             <li>Espaço Diferenciado</li>
             <li>Profissionais Qualificados</li>
             <li>Otima localização</li>
          </ul>
-        </div>
+        
 
         <img class="imagem_beneficios" src="beneficios.jpg" alt="">
 </body>
